# weather-rewind

./: .gitignore  CLAUDE.md  LICENSE  README.md  weather-rewind-plan.md
backend/: pyproject.toml
backend/src/weather_rewind/: main.py  models.py
backend/src/weather_rewind/api/routes/: weather.py
backend/src/weather_rewind/services/: weather_service.py
backend/tests/api/: test_weather.py
backend/tests/integration/: test_fetch_real_weather_data.py
backend/tests/services/: test_weather_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/api/: weather.ts
frontend/src/components/: DatePicker.test.tsx  DatePicker.tsx  LocationInput.test.tsx  LocationInput.tsx  WeatherDisplay.test.tsx  WeatherDisplay.tsx
