[project]
name = "weather-rewind"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # runtime dependencies
    "fastapi",
    "uvicorn",
    "httpx"
]

[project.optional-dependencies]
dev = [
    # test/dev dependencies
    "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]
